# mycelium

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.claude/skills/mycelium-read/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/mycelium-cli/: Cargo.toml
crates/mycelium-cli/src/: main.rs
crates/mycelium-core/: Cargo.toml
crates/mycelium-core/src/: config.rs  lib.rs  output.rs  pipeline.rs
crates/mycelium-core/src/dotnet/: assembly.rs  mod.rs  project.rs  solution.rs
crates/mycelium-core/src/graph/: knowledge_graph.rs  mod.rs  namespace_index.rs  scoring.rs  symbol_table.rs
crates/mycelium-core/src/languages/: c_cpp.rs  csharp.rs  go_lang.rs  java.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs  vbnet.rs
crates/mycelium-core/src/phases/: calls.rs  communities.rs  imports.rs  mod.rs  parsing.rs  processes.rs  structure.rs
crates/mycelium-core/tests/: test_calls.rs  test_communities.rs  test_imports.rs  test_languages.rs  test_namespace_index.rs  test_parsing.rs  test_pipeline.rs  test_processes.rs  test_structure.rs
crates/mycelium-core/tests/common/: mod.rs
crates/mycelium-python/: Cargo.toml
crates/mycelium-python/src/: lib.rs
mycelium/: __init__.py  cli.py  config.py  output.py  pipeline.py
mycelium/dotnet/: assembly.py  project.py  solution.py
mycelium/graph/: knowledge_graph.py  namespace_index.py  scoring.py  symbol_table.py
mycelium/languages/: __init__.py  base.py  c_cpp.py  csharp.py  go.py  java.py  python_lang.py  rust.py  typescript.py  vbnet.py
mycelium/phases/: calls.py  communities.py  imports.py  parsing.py  processes.py  structure.py
tests/: test_bindings.py  test_calls.py  test_communities.py  test_imports.py  test_languages.py  test_namespace_index.py  test_parsing.py  test_pipeline.py  test_processes.py  test_structure.py
tests/fixtures/c_simple/: main.c  repository.c  repository.h  service.c  service.h  types.c  types.h
tests/fixtures/cpp_simple/: handler.cpp  main.cpp  models.hpp  repository.cpp  repository.hpp  service.cpp  service.hpp
tests/fixtures/csharp_simple/: AbsenceController.cs  AbsenceException.cs  AbsenceModel.cs  AbsenceRepository.cs  AbsenceService.cs  IAbsenceRepository.cs  IAbsenceService.cs  LeaveRequestValidator.cs
tests/fixtures/go_package/: main.go
tests/fixtures/go_package/middleware/: middleware.go
tests/fixtures/go_package/model/: model.go
tests/fixtures/go_package/service/: service.go
tests/fixtures/go_simple/: handler.go  middleware.go  model.go  repository.go  service.go
tests/fixtures/java_package/com/example/controllers/: UserController.java
tests/fixtures/java_package/com/example/models/: User.java
tests/fixtures/java_package/com/example/services/: UserService.java
tests/fixtures/java_simple/: InMemoryUserRepository.java  User.java  UserController.java  UserDto.java  UserMapper.java  UserNotFoundException.java  UserRepository.java  UserService.java
tests/fixtures/mixed_dotnet/: MixedSolution.sln
tests/fixtures/mixed_dotnet/CSharpProject/: ApiController.cs  CSharpProject.csproj
tests/fixtures/mixed_dotnet/VBNetProject/: DataProcessor.vb  VBNetProject.vbproj
tests/fixtures/python_package/: main.py
tests/fixtures/python_package/app/models/: __init__.py  item.py
tests/fixtures/python_package/app/services/: user_service.py
tests/fixtures/python_package/app/utils/: helpers.py  validators.py
tests/fixtures/python_simple/: config.py  exceptions.py  handler.py  models.py  repository.py  service.py  validators.py
tests/fixtures/rust_simple/: error.rs  main.rs  model.rs  repository.rs  service.rs
tests/fixtures/typescript_simple/: controller.ts  index.ts  middleware.ts  models.ts  repository.ts  service.ts  utils.ts
tests/fixtures/vbnet_simple/: Calculator.vb  EmployeeModule.vb  EmployeeRepository.vb  EmployeeService.vb  EmployeeTypes.vb  EmployeeUtils.vb
