[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mycelium-map"
version = "1.0.0"
description = "Static analysis tool that maps the hidden network of connections in codebases"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Scott", email = "scott.raisbeck1985@gmail.com" }]
dependencies = ["click>=8.1", "rich>=13.0"]

[project.urls]
Homepage = "https://github.com/ScottRBK/mycelium"
Repository = "https://github.com/ScottRBK/mycelium"

[project.scripts]
mycelium-map = "mycelium.cli:cli"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.maturin]
manifest-path = "crates/mycelium-python/Cargo.toml"
module-name = "mycelium._mycelium_rust"
python-source = "."
python-packages = ["mycelium"]
bindings = "pyo3"
strip = true
features = ["pyo3/extension-module"]
