[package]
name = "mycelium-cli"
version = "1.0.0"
edition = "2021"
description = "CLI for Mycelium static analysis tool"
license = "MIT"

[[bin]]
name = "mycelium-map"
path = "src/main.rs"

[dependencies]
mycelium-core = { path = "../mycelium-core" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
serde_json = "1"
