[package]
name = "mycelium-core"
version = "1.0.0"
edition = "2021"
description = "Core analysis engine for Mycelium static analysis tool"
license = "MIT"

[dependencies]
tree-sitter = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-vb-dotnet = { path = "../../vendor/tree-sitter-vb-dotnet" }
tree-sitter-language = "0.1"
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rayon = "1.10"
walkdir = "2"
log = "0.4"
chrono = "0.4"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
